.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front-shell
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-shell-service
                port:
                  number: 80
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: frontend-catalog-service
                port:
                  number: 80
